feat: add admin customization drawer for the Content List portlet - EXO-88568 - eXIP7.3.0.12 (#850)
Fix feedbacks